--- a/tim_capstone_folder/tim_notebook.ipynb
+++ b/tim_capstone_folder/tim_notebook.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1083,7 @@
        "24                 0.0                 0.0                 0.0  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
        "(169073, 11)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1127,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1209,7 @@
        "103"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1564,7 @@
        "49              ST4000DM000          seagate"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1585,7 +1585,7 @@
        "0"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1596,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1612,7 @@
        "Name: manufacturer, dtype: int64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1623,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1632,7 +1632,7 @@
        "Int64Index([33381, 53781], dtype='int64')"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1643,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +1664,7 @@
        "Name: 33381, dtype: object"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1675,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1696,7 +1696,7 @@
        "Name: 53781, dtype: object"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1707,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1848,7 +1848,7 @@
        "4                 NaN                 0.0                 0.0      hitachi  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1859,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1869,7 +1869,7 @@
        "       'samsung', 'unknown'], dtype=object)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1880,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1917,40 +1917,40 @@
        "TOSHIBA MD04ABA400V                      152\n",
        "HGST HDS5C4040ALE630                     117\n",
        "                                       ...  \n",
-       "WDC WD10EARS                               3\n",
-       "WDC WD3200AAJS                             3\n",
        "ST6000DM004                                3\n",
-       "Hitachi HDS724040ALE640                    3\n",
+       "WDC WD10EARS                               3\n",
        "Seagate BarraCuda SSD ZA2000CM10002        3\n",
+       "Hitachi HDS724040ALE640                    3\n",
        "WDC WD2500AAJS                             3\n",
-       " 00MD00                                    2\n",
-       "WDC WD3200AAJB                             2\n",
+       "WDC WD3200AAJS                             3\n",
+       "WDC WD10EARX                               2\n",
        "WDC WD1600BPVT                             2\n",
        "WDC WD5003ABYX                             2\n",
-       "WDC WD10EARX                               2\n",
-       "WDC WD2500BEVT                             1\n",
+       "WDC WD3200AAJB                             2\n",
+       " 00MD00                                    2\n",
+       "ST33000651AS                               1\n",
+       "WDC WD3200BEKT                             1\n",
+       "WDC WD15EARS                               1\n",
        "ST1000LM024 HN                             1\n",
-       "Hitachi HDT725025VLA380                    1\n",
-       "WDC WD1001FALS                             1\n",
-       "WDC WD800JD                                1\n",
+       "HGST HMS5C4040BLE641                       1\n",
+       "Hitachi HDS5C3030BLE630                    1\n",
+       "WDC WD3200LPVX                             1\n",
        "WDC WD2500AAJB                             1\n",
        "ST31500341AS                               1\n",
-       "Hitachi HDS5C3030BLE630                    1\n",
+       "WDC WD800JD                                1\n",
+       "ST3500320AS                                1\n",
+       "SAMSUNG HD154UI                            1\n",
+       "WDC WD1001FALS                             1\n",
        "WDC WD800LB                                1\n",
        "WDC WD3200AAKS                             1\n",
-       "WDC WD10EALS                               1\n",
-       "WDC WD3200LPVX                             1\n",
-       "SAMSUNG HD154UI                            1\n",
-       "WDC WD15EARS                               1\n",
-       "WDC WD3200BEKT                             1\n",
-       "ST3500320AS                                1\n",
-       "ST33000651AS                               1\n",
        "WDC WD1000FYPS                             1\n",
-       "HGST HMS5C4040BLE641                       1\n",
+       "WDC WD2500BEVT                             1\n",
+       "WDC WD10EALS                               1\n",
+       "Hitachi HDT725025VLA380                    1\n",
        "Name: model, Length: 103, dtype: int64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1961,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1974,7 +1974,7 @@
        "Name: model, dtype: object"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2018,7 +2018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2034,7 +2034,7 @@
        "Name: manufacturer, dtype: int64"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2045,7 +2045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2055,7 +2055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2064,7 +2064,7 @@
        "7041"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2075,7 +2075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2145,7 +2145,7 @@
        "Name: serial_number, Length: 115150, dtype: bool"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2156,7 +2156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2201,7 +2201,7 @@
        "77265  PL2331LAHB93UJ  HGST HMS5C4040ALE640       5141.0"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2212,77 +2212,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "PL2331LAHB93UJ    3\n",
-       "ZA180Z6F          2\n",
-       "ZA189WP8          2\n",
-       "AAG7LSXH          2\n",
-       "ZA16V32F          2\n",
-       "AAGXW8VH          2\n",
-       "ZA13Q2Q9          2\n",
-       "ZA189WQN          2\n",
-       "ZA1805X8          2\n",
-       "ZA180Q9A          2\n",
-       "AAHKXNHH          2\n",
-       "ZA135NCY          2\n",
-       "AAHL9S3H          2\n",
-       "ZCH06VZD          2\n",
-       "ZCH07DGF          2\n",
-       "Z304K4BE          2\n",
-       "ZA12Z10T          2\n",
-       "PL1331LAGSRPUH    2\n",
-       "ZA16DSD8          2\n",
-       "ZA16D59G          2\n",
-       "PL1331LAHDDTWH    2\n",
-       "2AGLY67Y          2\n",
-       "S300X9GK          2\n",
-       "ZA10RRGP          2\n",
-       "8HH6YGDH          2\n",
-       "PL1331LAGSPZKH    2\n",
-       "2AGPSGKY          2\n",
-       "8HKDYTMH          2\n",
-       "ZA14EVVG          2\n",
-       "Z304JGCP          2\n",
+       "PL1331LAHD6JBH    2\n",
+       "ZA1818L4          2\n",
+       "ZA189JNC          2\n",
+       "45D7K133FMYB      2\n",
+       "ZA189W0G          2\n",
+       "Z300JZGN          2\n",
+       "ZCH08BXK          2\n",
+       "VKGK9LGX          2\n",
+       "ZA181466          2\n",
+       "Z300GQ4B          2\n",
+       "ZA18CE6C          2\n",
+       "ZCH06DSJ          2\n",
+       "ZA18145V          2\n",
+       "ZA181576          2\n",
+       "ZA14EL0Y          2\n",
+       "ZA17ZNAZ          2\n",
+       "ZCH02KRC          2\n",
+       "ZA13VMWT          2\n",
+       "ZA13G9QQ          2\n",
+       "ZA180QC4          2\n",
+       "ZA12SQN8          2\n",
+       "ZA12Y27D          2\n",
+       "ZA17ZNAL          2\n",
+       "2AGPKTPY          2\n",
+       "ZA1811D2          2\n",
+       "S300X9DN          2\n",
+       "ZA18122K          2\n",
+       "PL1331LAHBGA3H    2\n",
+       "ZA180R3R          2\n",
        "                 ..\n",
-       "8HJ9J22H          1\n",
-       "Z305DHSE          1\n",
-       "ZJV121VM          1\n",
-       "Z300JC7F          1\n",
-       "PL2331LAGRJR6J    1\n",
-       "ZA212EPB          1\n",
-       "ZA13Z49D          1\n",
-       "PL1331LAGSAGTH    1\n",
-       "Z30252HS          1\n",
-       "ZCH07ES6          1\n",
-       "8CH15DHE          1\n",
-       "AAG6KVXH          1\n",
-       "AAHL4M9H          1\n",
-       "66HLS2P1S         1\n",
-       "W300KQPN          1\n",
-       "ZJV11HDE          1\n",
-       "S30107B5          1\n",
-       "S300ZRF2          1\n",
-       "ZJV11GVH          1\n",
-       "ZCH09PCR          1\n",
-       "ZCH086SF          1\n",
-       "Z302A0JK          1\n",
-       "ZCH070K6          1\n",
-       "ZCH05ELQ          1\n",
-       "Z300WN5Y          1\n",
-       "ZJV04EZZ          1\n",
-       "ZJV12Z4C          1\n",
-       "ZCH0CXTC          1\n",
-       "ZCH0A1LL          1\n",
-       "Z302ETHL          1\n",
+       "8CH171ME          1\n",
+       "PL1321LAG329HH    1\n",
+       "ZA17Z102          1\n",
+       "ZCH08B9L          1\n",
+       "ZA143SHD          1\n",
+       "PL2331LAHDX7WJ    1\n",
+       "ZA12RAYR          1\n",
+       "JK11A8B9J0DUUF    1\n",
+       "PL1331LAGSKHNH    1\n",
+       "PL2331LAGMNXUJ    1\n",
+       "PL1331LAGM0BTH    1\n",
+       "AAGXU99H          1\n",
+       "ZJV0WEZZ          1\n",
+       "S300Z6X9          1\n",
+       "ZCH084BW          1\n",
+       "ZA1621JG          1\n",
+       "AAG6Z04H          1\n",
+       "JK1101B8KNHL3S    1\n",
+       "Z300JC83          1\n",
+       "ZJV04K8K          1\n",
+       "ZJV02MZH          1\n",
+       "Z30111C8          1\n",
+       "ZCH07ST5          1\n",
+       "AAG2XUKH          1\n",
+       "ZJV121YP          1\n",
+       "JK1171YAK1XBEN    1\n",
+       "PL2331LAGJL0HJ    1\n",
+       "Z3055LH2          1\n",
+       "PL1331LAGTVPLH    1\n",
+       "S300XA90          1\n",
        "Name: serial_number, Length: 162030, dtype: int64"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
