--- a/tim_capstone_folder/clean.ipynb
+++ b/tim_capstone_folder/clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,15 @@
     "# visualizations\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
     "\n",
     "# py files\n",
     "import acquire\n",
@@ -213,6 +222,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Early Failure Column ---> Cutoff = 1.6"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -255,8 +271,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Keep Only Old & Failed"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = explore.old_or_fail(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 121902 entries, 0 to 168960\n",
+      "Data columns (total 12 columns):\n",
+      "serial_number                    121902 non-null object\n",
+      "manufacturer                     121902 non-null object\n",
+      "model                            121902 non-null object\n",
+      "capacity_terabytes               121902 non-null float64\n",
+      "failure                          121902 non-null int64\n",
+      "drive_age_in_years               121902 non-null float64\n",
+      "reallocated_sectors_count        121902 non-null float64\n",
+      "reported_uncorrectable_errors    121902 non-null float64\n",
+      "command_timeout                  121902 non-null float64\n",
+      "current_pending_sector_count     121902 non-null float64\n",
+      "uncorrectable_sector_count       121902 non-null float64\n",
+      "early_failure                    121902 non-null int64\n",
+      "dtypes: float64(7), int64(2), object(3)\n",
+      "memory usage: 12.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SMART ---> Bool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,25 +341,177 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 121902 entries, 0 to 168960\n",
+      "Data columns (total 17 columns):\n",
+      "serial_number                    121902 non-null object\n",
+      "manufacturer                     121902 non-null object\n",
+      "model                            121902 non-null object\n",
+      "capacity_terabytes               121902 non-null float64\n",
+      "failure                          121902 non-null int64\n",
+      "drive_age_in_years               121902 non-null float64\n",
+      "reallocated_sectors_count        121902 non-null float64\n",
+      "reported_uncorrectable_errors    121902 non-null float64\n",
+      "command_timeout                  121902 non-null float64\n",
+      "current_pending_sector_count     121902 non-null float64\n",
+      "uncorrectable_sector_count       121902 non-null float64\n",
+      "early_failure                    121902 non-null int64\n",
+      "smart_5_nonzero                  121902 non-null bool\n",
+      "smart_187_nonzero                121902 non-null bool\n",
+      "smart_188_nonzero                121902 non-null bool\n",
+      "smart_197_nonzero                121902 non-null bool\n",
+      "smart_198_nonzero                121902 non-null bool\n",
+      "dtypes: bool(5), float64(7), int64(2), object(3)\n",
+      "memory usage: 12.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Remove Manufacturers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = explore.remove_manufacturers(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Split Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_my_data(df):\n",
+    "    X = df.drop(columns = ['serial_number', 'model', 'failure', 'early_failure', 'drive_age_in_years', 'reallocated_sectors_count', 'reported_uncorrectable_errors', 'command_timeout', 'current_pending_sector_count', 'uncorrectable_sector_count'])\n",
+    "    y = df[['early_failure']]\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, train_size = .80, random_state = 123, stratify=df.early_failure)\n",
+    "    return X, y, X_train, X_test, y_train, y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, y, X_train, X_test, y_train, y_test = split_my_data(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "Index(['serial_number', 'manufacturer', 'model', 'capacity_terabytes',\n",
-       "       'failure', 'drive_age_in_years', 'reallocated_sectors_count',\n",
-       "       'reported_uncorrectable_errors', 'command_timeout',\n",
-       "       'current_pending_sector_count', 'uncorrectable_sector_count',\n",
-       "       'early_failure', 'smart_5_nonzero', 'smart_187_nonzero',\n",
-       "       'smart_188_nonzero', 'smart_197_nonzero', 'smart_198_nonzero'],\n",
-       "      dtype='object')"
+       "(97520, 97520, 24380, 24380)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.columns\n"
+    "len(X_train), len(y_train), len(X_test), len(y_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['manufacturer', 'capacity_terabytes', 'smart_5_nonzero',\n",
+       "       'smart_187_nonzero', 'smart_188_nonzero', 'smart_197_nonzero',\n",
+       "       'smart_198_nonzero'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Encode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "#df = model.encode_hot(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test = model.encode_hot(X_train, X_test, col_name = 'manufacturer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = X_train.drop(columns = 'manufacturer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = X_test.drop(columns = 'manufacturer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
