--- a/tim_capstone_folder/pipeline.ipynb
+++ b/tim_capstone_folder/pipeline.ipynb
@@ -6163,22 +6163,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(121900, 121900, 24380, 24380)"
+       "(121900, 121900, 97520, 24380)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(X), len(y), len(X_test), len(X_test)"
+    "len(X), len(y), len(X_train), len(X_test)"
    ]
   },
   {
