--- a/Johns_capstone_folder/johns_other_hard_drive_pipeline.ipynb
+++ b/Johns_capstone_folder/johns_other_hard_drive_pipeline.ipynb
@@ -1494,7 +1494,7 @@
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
