--- a/david_capstone_folder/david_test.ipynb
+++ b/david_capstone_folder/david_test.ipynb
@@ -1052,36 +1052,36 @@
        "ST9250315AS                   56\n",
        "ST3160316AS                   53\n",
        "                           ...  \n",
-       "ST8000DM004                    4\n",
-       "ST250LT007                     4\n",
+       "WDC WD800JB                    4\n",
        "HGST HUH721212ALE600           4\n",
-       "WDC WD10EARS                   3\n",
-       "Hitachi HDS724040ALE640        3\n",
+       "ST8000DM004                    4\n",
        "WDC WD3200AAJS                 3\n",
        "WDC WD2500AAJS                 3\n",
+       "WDC WD10EARS                   3\n",
+       "Hitachi HDS724040ALE640        3\n",
        "WDC WD3200AAJB                 2\n",
-       "WDC WD10EARX                   2\n",
        "WDC WD5003ABYX                 2\n",
+       "WDC WD10EARX                   2\n",
        "WDC WD1600BPVT                 2\n",
-       "ST1000LM024 HN                 1\n",
-       "WDC WD10EALS                   1\n",
-       "WDC WD800LB                    1\n",
-       "ST3500320AS                    1\n",
-       "WDC WD3200AAKS                 1\n",
+       "WDC WD2500AAJB                 1\n",
        "Hitachi HDS5C3030BLE630        1\n",
-       "TOSHIBA HDWF180                1\n",
-       "WDC WD800JD                    1\n",
-       "WDC WD2500BEVT                 1\n",
-       "WDC WD15EARS                   1\n",
-       "WDC WD3200BEKT                 1\n",
-       "Hitachi HDT725025VLA380        1\n",
-       "ST2000VN000                    1\n",
+       "ST3500320AS                    1\n",
+       "ST1000LM024 HN                 1\n",
+       "WDC WD3200LPVX                 1\n",
+       "ST33000651AS                   1\n",
        "ST31500341AS                   1\n",
        "WDC WD1000FYPS                 1\n",
-       "WDC WD3200LPVX                 1\n",
+       "WDC WD800JD                    1\n",
+       "WDC WD15EARS                   1\n",
+       "ST2000VN000                    1\n",
+       "WDC WD3200BEKT                 1\n",
+       "WDC WD800LB                    1\n",
+       "WDC WD10EALS                   1\n",
+       "TOSHIBA HDWF180                1\n",
+       "WDC WD2500BEVT                 1\n",
+       "WDC WD3200AAKS                 1\n",
        "WDC WD1001FALS                 1\n",
-       "WDC WD2500AAJB                 1\n",
-       "ST33000651AS                   1\n",
+       "Hitachi HDT725025VLA380        1\n",
        "Name: model, Length: 90, dtype: int64"
       ]
      },
@@ -2689,7 +2689,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1119d7470>"
+       "<matplotlib.collections.PathCollection at 0x1069c62e8>"
       ]
      },
      "execution_count": 33,
@@ -2721,7 +2721,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x12d252b38>"
+       "<matplotlib.collections.PathCollection at 0x1220c9b00>"
       ]
      },
      "execution_count": 34,
@@ -3370,7 +3370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3385,7 +3385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -3394,7 +3394,7 @@
        "Text(0.5, 1.0, 'Recall for different K values')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3422,7 +3422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -3432,7 +3432,7 @@
        "       [ 1641,   437]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3443,7 +3443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -3467,7 +3467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3481,7 +3481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -3518,36 +3518,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    119302\n",
+       "1      2598\n",
+       "Name: early_failure, dtype: int64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.early_failure.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.1312551271534046"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "2598/(2598+119302) *100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    115989\n",
+       "1      5911\n",
+       "Name: failure, dtype: int64"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.failure.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['capacity_terabytes', 'smart_5_nonzero', 'smart_187_nonzero',\n",
+       "       'smart_188_nonzero', 'smart_197_nonzero', 'smart_198_nonzero',\n",
+       "       'Hitachi', 'Seagate', 'Toshiba', 'Western Digital'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train.columns"
    ]
